plugins {
    id 'groovy'
    id 'java'
    id 'me.champeau.jmh' version '0.6.8'
}

group = 'me.mneri.csv'
version = '2.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'ch.randelshofer:fastdoubleparser:2.0.1'

    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'

    jmh 'com.github.skjolber.sesseltjonna-csv:parser:1.0.26'
    jmh 'com.opencsv:opencsv:5.12.0'
    jmh 'com.univocity:univocity-parsers:2.9.1'
    jmh 'de.siegmar:fastcsv:4.4.0'
    jmh 'org.apache.commons:commons-csv:1.10.0'
    jmh 'org.simpleflatmapper:sfm-csv:9.0.2'

    testImplementation 'org.spockframework:spock-core:2.4-groovy-4.0'
    testImplementation 'org.apache.groovy:groovy:4.0.18'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly "net.bytebuddy:byte-buddy:1.17.7"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

sourceSets {
    java17
    main {
        compileClasspath += java17.output
        runtimeClasspath += java17.output
    }
    test {
        compileClasspath += java17.output
        runtimeClasspath += java17.output
    }
}

tasks.named('compileJava17Java') {
    options.release = 17
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.named('compileJava') {
    options.release = 8
}

tasks.named('jar') {
    from sourceSets.java17.output
}

afterEvaluate {
    sourceSets.jmh.compileClasspath += sourceSets.java17.output
    sourceSets.jmh.runtimeClasspath += sourceSets.java17.output
}

tasks.named('jmhJar') {
    from sourceSets.java17.output
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--add-modules=jdk.incubator.vector']
}

test {
    useJUnitPlatform()

    ext.passed = 0
    ext.failed = 0
    ext.skipped = 0
    afterTest { desc, result ->
        if (result.resultType == TestResult.ResultType.SUCCESS) {
            ext.passed++
        } else if (result.resultType == TestResult.ResultType.SKIPPED) {
            ext.skipped++
        } else if (result.resultType == TestResult.ResultType.FAILURE) {
            ext.failed++
        }
    }
    doLast {
        print "${ext.passed} test passed, ${ext.skipped} skipped, ${ext.failed} failed"
    }
}
